# ProjetoJardim

./: CMakeLists.txt  inicializador.sh
src/: .game_config.json.swp  config_parser.cpp  config_parser.h  games_config.json  haptic_simulator.cpp  haptic_simulator.h  haptics.cpp  haptics.h  main.cpp
